Fix x-scroll on narrow width screen

--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -28,6 +28,7 @@
 
 .message {
   width: 100%;
+  overflow: hidden;
   padding: 16px;
   background-color: #ff0;
   text-align: justify;
